# jupyter-classroom

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml  publish.yml
jupyter_classroom/: __init__.py  app.py  auth.py  hub_client.py
jupyter_classroom/routers/: admin.py  classrooms.py  students.py
jupyter_classroom/templates/: admin.html  base.html  classroom.html  dashboard.html
routers/: admin.py  classrooms.py  students.py
templates/: admin.html  base.html  classroom.html  dashboard.html  error.html
