[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-classroom"
dynamic = ["version"]
description = "Classroom management dashboard for JupyterHub"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/leowilkin/jupyter-classroom"

[project.scripts]
jupyter-classroom = "jupyter_classroom.app:main"

[tool.hatch.version]
path = "jupyter_classroom/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_classroom"]
